// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRepoStateAsync can handle adding one file 1`] = `
Object {
  "nestedTestProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
  "nestedTestProject/src/file 1.txt": "c7b2f707ac99ca522f965210a7b6b0b109863f34",
  "testProject/a.txt": "2e65efe2a145dda7ee51d1741299f848e5bf752e",
  "testProject/file  2.txt": "a385f754ec4fede884a4864d090064d9aeef8ccb",
  "testProject/file1.txt": "c7b2f707ac99ca522f965210a7b6b0b109863f34",
  "testProject/file蝴蝶.txt": "ae814af81e16cb2ae8c57503c77e2cab6b5462ba",
  "testProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
}
`;

exports[`getRepoStateAsync can handle adding two files 1`] = `
Object {
  "nestedTestProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
  "nestedTestProject/src/file 1.txt": "c7b2f707ac99ca522f965210a7b6b0b109863f34",
  "testProject/a.txt": "2e65efe2a145dda7ee51d1741299f848e5bf752e",
  "testProject/b.txt": "2e65efe2a145dda7ee51d1741299f848e5bf752e",
  "testProject/file  2.txt": "a385f754ec4fede884a4864d090064d9aeef8ccb",
  "testProject/file1.txt": "c7b2f707ac99ca522f965210a7b6b0b109863f34",
  "testProject/file蝴蝶.txt": "ae814af81e16cb2ae8c57503c77e2cab6b5462ba",
  "testProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
}
`;

exports[`getRepoStateAsync can handle changing one file 1`] = `
Object {
  "nestedTestProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
  "nestedTestProject/src/file 1.txt": "c7b2f707ac99ca522f965210a7b6b0b109863f34",
  "testProject/file  2.txt": "a385f754ec4fede884a4864d090064d9aeef8ccb",
  "testProject/file1.txt": "f2ba8f84ab5c1bce84a7b441cb1959cfc7093b7f",
  "testProject/file蝴蝶.txt": "ae814af81e16cb2ae8c57503c77e2cab6b5462ba",
  "testProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
}
`;

exports[`getRepoStateAsync can handle removing one file 1`] = `
Object {
  "nestedTestProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
  "nestedTestProject/src/file 1.txt": "c7b2f707ac99ca522f965210a7b6b0b109863f34",
  "testProject/file  2.txt": "a385f754ec4fede884a4864d090064d9aeef8ccb",
  "testProject/file蝴蝶.txt": "ae814af81e16cb2ae8c57503c77e2cab6b5462ba",
  "testProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
}
`;

exports[`getRepoStateAsync can handle uncommitted filenames with spaces and non-ASCII characters 1`] = `
Object {
  "nestedTestProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
  "nestedTestProject/src/file 1.txt": "c7b2f707ac99ca522f965210a7b6b0b109863f34",
  "testProject/a  file name.txt": "2e65efe2a145dda7ee51d1741299f848e5bf752e",
  "testProject/a file.txt": "2e65efe2a145dda7ee51d1741299f848e5bf752e",
  "testProject/file  2.txt": "a385f754ec4fede884a4864d090064d9aeef8ccb",
  "testProject/file1.txt": "c7b2f707ac99ca522f965210a7b6b0b109863f34",
  "testProject/file蝴蝶.txt": "ae814af81e16cb2ae8c57503c77e2cab6b5462ba",
  "testProject/newFile批把.txt": "2e65efe2a145dda7ee51d1741299f848e5bf752e",
  "testProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
}
`;

exports[`getRepoStateAsync can parse committed files 1`] = `
Object {
  "nestedTestProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
  "nestedTestProject/src/file 1.txt": "c7b2f707ac99ca522f965210a7b6b0b109863f34",
  "testProject/file  2.txt": "a385f754ec4fede884a4864d090064d9aeef8ccb",
  "testProject/file1.txt": "c7b2f707ac99ca522f965210a7b6b0b109863f34",
  "testProject/file蝴蝶.txt": "ae814af81e16cb2ae8c57503c77e2cab6b5462ba",
  "testProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
}
`;

exports[`getRepoStateAsync handles requests for additional files 1`] = `
Object {
  "nestedTestProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
  "nestedTestProject/src/file 1.txt": "c7b2f707ac99ca522f965210a7b6b0b109863f34",
  "testProject/file  2.txt": "a385f754ec4fede884a4864d090064d9aeef8ccb",
  "testProject/file1.txt": "c7b2f707ac99ca522f965210a7b6b0b109863f34",
  "testProject/file蝴蝶.txt": "ae814af81e16cb2ae8c57503c77e2cab6b5462ba",
  "testProject/log.log": "2e65efe2a145dda7ee51d1741299f848e5bf752e",
  "testProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
}
`;

exports[`getRepoStateAsync handles requests for additional files 2`] = `
Object {
  "nestedTestProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
  "nestedTestProject/src/file 1.txt": "c7b2f707ac99ca522f965210a7b6b0b109863f34",
  "testProject/file  2.txt": "a385f754ec4fede884a4864d090064d9aeef8ccb",
  "testProject/file1.txt": "c7b2f707ac99ca522f965210a7b6b0b109863f34",
  "testProject/file蝴蝶.txt": "ae814af81e16cb2ae8c57503c77e2cab6b5462ba",
  "testProject/log.log": "2e65efe2a145dda7ee51d1741299f848e5bf752e",
  "testProject/package.json": "18a1e415e56220fa5122428a4ef8eb8874756576",
}
`;

exports[`parseGitHashObject can parse multiple entries 1`] = `
Map {
  "a" => "11",
  "b" => "22",
  "c" => "33",
}
`;

exports[`parseGitHashObject can parse multiple entries with trailing whitespace 1`] = `
Map {
  "a" => "11",
  "b" => "22",
  "c" => "33",
}
`;

exports[`parseGitHashObject throws if too few hashes are provided 1`] = `"Expected 3 hashes from \\"git hash-object\\" but received 2"`;

exports[`parseGitHashObject throws if too many hashes are provided 1`] = `"Expected 2 hashes from \\"git hash-object\\" but received 3"`;
